added support for generified repeating params

--- a/core/src/test/resources/org/raml/params/param-types-with-repeat.yaml
+++ b/core/src/test/resources/org/raml/params/param-types-with-repeat.yaml
@@ -32,6 +32,12 @@ title: param types
                 required: false
                 default: 3
 
+            selected_id:
+                displayName: selected ID
+                type: integer
+                repeat: true
+                required: false
+
             price:
                 displayName: price name
                 description: price description
