added support for enums

--- a/core/src/test/resources/org/raml/params/param-types-with-repeat.yaml
+++ b/core/src/test/resources/org/raml/params/param-types-with-repeat.yaml
@@ -32,7 +32,7 @@ title: param types
                 required: false
                 default: 3
 
-            selected_id:
+            selected-id:
                 displayName: selected ID
                 type: integer
                 repeat: true
