--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.raml.plugins</groupId>
     <artifactId>raml-jaxrs-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>RAML JAX-RS Maven Plug-in</name>
@@ -36,20 +37,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
