--- a/jersey-example/pom.xml
+++ b/jersey-example/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -40,6 +45,7 @@
                     <basePackageName>org.raml.jaxrs.example</basePackageName>
                     <jaxrsVersion>2.0</jaxrsVersion>
                     <useJsr303Annotations>false</useJsr303Annotations>
+                    <jsonMapper>jackson2</jsonMapper>
                     <removeOldOutput>true</removeOldOutput>
                 </configuration>
                 <executions>
