--- a/jersey-example/pom.xml
+++ b/jersey-example/pom.xml
@@ -57,6 +57,15 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                    <mainClass>org.raml.jaxrs.example.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
