added support for JSR-303 annotations

--- a/jersey-example/src/main/resources/raml/sales-enablement-api.yaml
+++ b/jersey-example/src/main/resources/raml/sales-enablement-api.yaml
@@ -134,11 +134,11 @@ traits:
         start:
           displayName: start
           description: The first page to return
-          type: number
+          type: integer
         pages:
           displayName: pages
           description: The number of pages to return
-          type: number
+          type: integer
   - secured:
       displayName: secured
       headers:
