--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>mailapi</artifactId>
             <version>1.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>com.sun.codemodel</groupId>
