--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.raml</groupId>
             <artifactId>raml-parser</artifactId>
-            <version>0.8.2</version>
+            <version>0.9-SNAPSHOT</version>
         </dependency>
 
         <dependency>
