--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <org.apache.maven.plugin-tools.version>3.2</org.apache.maven.plugin-tools.version>
+        <licensePath>../LICENSE_HEADER.txt</licensePath>
     </properties>
 
     <dependencies>
