--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -43,6 +43,9 @@ ext {
 
 repositories {
     mavenLocal()
+    if(additionalRepoUrl) {
+        maven { url additionalRepoUrl }
+    }
     maven { url 'https://repository.mulesoft.org/snapshots/' }
     maven { url 'https://repository.mulesoft.org/releases/' }
     mavenCentral()
