--- a/eclipse-plugin/plugin.xml
+++ b/eclipse-plugin/plugin.xml
@@ -7,16 +7,18 @@
         
           <command
               commandId="raml-jaxrs-eclipse-plugin.generate"
-              label="RAML to JAXRS"
+              label="RAML to JAX-RS"
               style="push">
-            <!-- icon="icons/new_rest_wizard.gif" -->  
                   <visibleWhen>
                       <with  variable="activeMenuSelection">
                           <iterate>
-                   <!--  <adapt
-                           type="org.eclipse.jdt.core.ICompilationUnit">
-                   </adapt>
-                   -->
+                   				<adapt
+                           			type="org.eclipse.core.resources.IResource">
+                           			<test
+                   						property="org.eclipse.core.resources.name"
+                   						value="*.raml" >
+                   					</test>
+                   				</adapt>
                           </iterate>
                       </with>
                   </visibleWhen>
